--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <sectvion class="sectioncommant">
         <div class="imagefont"></div>
         <div class="divcommant">
-            <h1 class="textcommant">ASSOCIATION DES TECHNICIENS DE SERFACE SECTEUR DE SANTE AU MALI</h1>
+            <h1 class="textcommant">ASSOCIATION DES TECHNICIENS DE SURFACE SECTEUR DE SANTE AU MALI</h1>
         </div>
             
     </sectvion>
