--- a/apropos.html
+++ b/apropos.html
@@ -122,7 +122,7 @@
     </section>
     <section class="sectionbody">
         <h1 class="title">QUI NOUS SOMMES</h1>
-        <p class="textApropos"><span class="spantext">ASSOCIATION DES TECHNICIENS DE SERFACE SECTEUR SANTE AU MALI</span>
+        <p class="textApropos"><span class="spantext">ASSOCIATION DES TECHNICIENS DE SURFACE SECTEUR DE SANTE AU MALI</span>
         </br>Est un association des Techniciens (Agent d'entretien, maintenance ou Agent de propriété et d'hygiène, au saint des structures). Il est charge du transport des malades, du nettoyage Des blocs opératoires, de l'entretien des blouses et chant opératoire...Ect.
         </br> Nos agents de propreté en milieu hospitalier ont suivi une formation adaptée. En plus des protocoles de nettoyages conventionnels, des connaissances en chimie et microbiologie leur ont été également dispensés</p>
     </section>
