--- a/apropos.html
+++ b/apropos.html
@@ -60,7 +60,10 @@
             color: black;
         }
         .apropos{
-            text-decoration:underline 3px white;
+          border: 1px solid white; 
+          padding: 5px; 
+          border-radius: 5px;
+          background-color: white;
         }
         .sectionbody{
             grid-area: sectionbody; 
