--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,10 @@
             margin-left: 10px;
         }
         .contact{
-            text-decoration:underline 3px white;
+          border: 1px solid white; 
+          padding: 5px; 
+          border-radius: 5px;
+          background-color: white;
         }
         .sectionappbar{
             grid-area: sectionappbar;
