--- a/services.html
+++ b/services.html
@@ -38,7 +38,10 @@
             margin-left: 10px;
         }
         .service{
-            text-decoration:underline 3px white;
+          border: 1px solid white; 
+          padding: 5px; 
+          border-radius: 5px;
+          background-color: white;
         }
         .sectionappbar{
             grid-area: sectionappbar;
