--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ates-ssm</title>
+    <title>Association des techniciens de surface sercteur de santé au mali</title>
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <style>
         *{
             margin: 0;padding: 0;text-decoration: none;
