--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Contact</title>
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <style>
         *{
             padding: 0;margin: 0;text-decoration: none;
